--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.10.3",
+    "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -21,5 +23,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "vue-tsc": "^1.8.27"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
